--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,26 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+.grid-body-wrapper {
+  background-color: orange;
+  max-height: 100vh;
+  min-height: 100vh;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-areas:
+    'header header main main main main main main main main main main'
+    'header header main main main main main main main main main main'
+    'header header main main main main main main main main main main';
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.icons-area {
+  grid-area: header;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.folder-area {
+  grid-area: main;
+}
+
+.folder-top-bar-buttons_button {
+  @apply hover:bg-neutral-600 w-full h-full px-4 flex items-center justify-center;
 }
