--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -204,3 +204,109 @@ main {
   cursor: pointer;
   @apply bg-neutral-400 outlined;
 }
+
+.folder-grid-area {
+  display: grid;
+  position: relative;
+  grid-template-columns: repeat(12, 1fr);
+  grid-auto-rows: repeat(12, 1fr);
+  height: 100%;
+  grid-template-areas:
+    'aside aside aside aside folderMain folderMain folderMain folderMain folderMain folderMain folderMain folderMain'
+    'aside aside aside aside folderMain folderMain folderMain folderMain folderMain folderMain folderMain folderMain'
+    'aside aside aside aside folderMain folderMain folderMain folderMain folderMain folderMain folderMain folderMain';
+}
+
+.folder-main {
+  grid-area: folderMain;
+}
+
+.folder-aside {
+  grid-area: aside;
+}
+
+.loadingBar {
+  @apply w-full h-[5vh] inlined bg-gray-400 flex relative;
+}
+.loadingBar .blueBar {
+  animation: blueBarAnimation 2s infinite;
+  @apply h-full w-[27%] bg-blue-900 left-0 top-0 flex justify-center items-center;
+}
+
+.loadingBar::before {
+  /* animation: blueBarAnimationNumbers  infinite 5s; */
+  @apply text-white font-bold absolute  w-full flex items-center justify-center;
+}
+
+@keyframes blueBarAnimation {
+  0% {
+    @apply w-[0%];
+  }
+
+  20% {
+    @apply w-[20%];
+  }
+  30% {
+    @apply w-[20%];
+  }
+  32% {
+    @apply w-[21%];
+  }
+  40% {
+    @apply w-[21%];
+  }
+  48% {
+    @apply w-[26%];
+  }
+  52% {
+    @apply w-[26%];
+  }
+  56% {
+    @apply w-[30%];
+  }
+  70% {
+    @apply w-[58%];
+  }
+  86% {
+    @apply w-[70%];
+  }
+  100% {
+    @apply w-[100%];
+  }
+}
+@keyframes blueBarAnimationNumbers {
+  0% {
+    content: '0%';
+  }
+
+  20% {
+    content: '20%';
+  }
+  30% {
+    content: '20%';
+  }
+  32% {
+    content: '21%';
+  }
+  40% {
+    content: '21%';
+  }
+  48% {
+    content: '26%';
+  }
+  52% {
+    content: '26%';
+  }
+  56% {
+    content: '30%';
+  }
+  70% {
+    content: '58%';
+  }
+  86% {
+    content: '70%';
+  }
+  100% {
+    content: '100%';
+  }
+}
